Update everything
