# routes/orderRoutes.js
@@ -1,33 +1,15 @@
 const express = require('express');
-const router = express.Router();
+const { orderValidationRules, validate } = require('../validators/orderValidator');
+const { ensureAuth } = require('../middleware/authMiddleware');
 const orderController = require('../controllers/orderController');
-const { body, validationResult } = require('express-validator');
-const passport = require('passport'); // to secure routes
+
+const router = express.Router();
 
 router.get('/', orderController.getOrders);
 router.get('/:id', orderController.getOrderById);
 
-// user must log in
-router.post(
-  '/',
-  passport.authenticate('jwt', { session: false }),
-  [
-    body('user').isMongoId(),
-    body('items').isArray({ min: 1 }),
-    body('items.*.cake').isMongoId(),
-    body('items.*.quantity').isInt({ min: 1 }),
-    body('totalPrice').isFloat({ min: 0 })
-  ],
-  (req, res, next) => {
-    const errors = validationResult(req);
-    if (!errors.isEmpty()) return res.status(400).json({ errors: errors.array() });
-    next();
-  },
-  orderController.createOrder
-);
-
-// For Admin
-router.put('/:id', passport.authenticate('jwt', { session: false }), orderController.updateOrder);
-router.delete('/:id', passport.authenticate('jwt', { session: false }), orderController.deleteOrder);
+router.post('/', ensureAuth, orderValidationRules(), validate, orderController.createOrder);
+router.put('/:id', ensureAuth, orderValidationRules(), validate, orderController.updateOrder);
+router.delete('/:id', ensureAuth, orderController.deleteOrder);
 
 module.exports = router;
